# bevy_frost

./: .envrc  .gitignore  ACKNOWLEDGEMENTS.md  Cargo.toml  Makefile  PROJECT  flake.nix
crates/bevy_frost/: Cargo.toml
crates/bevy_frost/examples/: demo.rs
crates/bevy_frost/src/: lib.rs  prelude.rs
crates/egui_frost/: Cargo.toml
crates/egui_frost/examples/: simple.rs
crates/egui_frost/src/: lib.rs
crates/frostcore/: Cargo.toml
crates/frostcore/src/: code.rs  command_palette.rs  floating.rs  icons.rs  lib.rs  maximize.rs  prelude.rs  snarl.rs  statusbar.rs  style.rs
crates/frostcore/src/features/: mod.rs
crates/frostcore/src/features/code_editor/: mod.rs
crates/frostcore/src/features/code_editor/completer/: mod.rs
crates/frostcore/src/features/code_editor/themes/: gruvbox.rs  mod.rs
crates/frostcore/src/features/snarl/: ui.rs
crates/frostcore/src/features/snarl/ui/: effect.rs  pin.rs  state.rs  viewer.rs  wire.rs
crates/frostcore/src/ribbon/: active.rs  assembly.rs  declare.rs  ghost.rs  layout.rs  mod.rs  paint.rs  static_ribbon.rs
crates/frostcore/src/widgets/: button.rs  caption.rs  chip.rs  color.rs  context_menu.rs  drag.rs  dropdown.rs  foldable.rs  group.rs  hybrid_select.rs  icon.rs  layout.rs  mod.rs  progressbar.rs  row.rs  search.rs  shared.rs  slider.rs  splitter.rs  subsection.rs  toggle.rs  tree.rs
examples/: demo.rs
src/: code.rs  floating.rs  lib.rs  maximize.rs  prelude.rs  snarl.rs  style.rs
src/ribbon/: active.rs  assembly.rs  declare.rs  ghost.rs  kinds.rs  layout.rs  mod.rs  paint.rs  static_ribbon.rs
src/widgets/: button.rs  caption.rs  color.rs  drag.rs  dropdown.rs  foldable.rs  group.rs  hybrid_select.rs  icon.rs  layout.rs  mod.rs  progressbar.rs  row.rs  shared.rs  slider.rs  splitter.rs  subsection.rs  toggle.rs  tree.rs
