[package]
name = "bevy_frost"
description = "Bevy integration for the frost glass-themed editor UI kit. Wraps `frostcore` with `Resource`s, a `Plugin` that installs the theme, and the transform-gizmo always-on-top material."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
frostcore = { workspace = true, features = ["bevy"] }
bevy = { workspace = true, features = [
    "std",
    "async_executor",
    "multi_threaded",
    "bevy_asset",
    "bevy_state",
    "bevy_log",
    "bevy_window",
    "bevy_winit",
    "bevy_input_focus",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_light",
    "bevy_mesh",
    "bevy_camera",
    "bevy_image",
    "bevy_gizmos",
    "bevy_gizmos_render",
    "bevy_scene",
    "default_font",
    "tonemapping_luts",
    "smaa_luts",
    "ktx2",
    "zstd_rust",
    "png",
    "x11",
    "reflect_auto_register",
] }
bevy_egui = { workspace = true, features = [
    "default_fonts",
    "render",
] }

[[example]]
name = "demo"
path = "examples/demo.rs"
