[package]
name = "egui_frost"
description = "Plain-egui facade for the frost glass-themed editor UI kit. Re-exports `frostcore` verbatim plus a small `install` helper for eframe / any standalone egui host. No bevy dependency."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
frostcore = { workspace = true }
egui = { workspace = true }

[dev-dependencies]
# `eframe` pairs the same egui version that frostcore builds
# against (0.33). Used by the `demo` example to show how an
# egui-only app wires in the frost theme + widgets.
eframe = { version = "0.33", default-features = false, features = [
    "default_fonts",
    # `wgpu` backend (instead of `glow`) — lets the demo run under
    # the same `nixVulkan` wrapper the Bevy example uses, so nix
    # users don't need a second GL-driver wrapper.
    "wgpu",
    # `x11` pulls the matching winit feature so winit's Linux
    # platform impl compiles — without it `maybe_wait_on_main`
    # can't resolve which backend's `&Self` to use (E0282 closure
    # inference error).
    "x11",
] }
# eframe pulls `wgpu` with NO backend features enabled (just
# `std`). Without a backend wgpu panics at startup with
# "No wgpu backend feature that is implemented for the target
# platform was enabled." Add wgpu directly and turn on Vulkan
# (Linux/Windows/Android) + Metal (macOS/iOS) — the combo `bevy`
# also enables — so the demo works on every desktop platform.
wgpu = { version = "27.0", default-features = false, features = [
    "std",
    "vulkan",
    "metal",
    "dx12",
] }

[[example]]
name = "simple"
path = "examples/simple.rs"
